# sortify

./: .gitignore  README.md  config.py  logger_config.py  main.py  organizer.py  pyproject.toml  run_gui.py  run_sortify.py
sortify/: __main__.py  gui.py  organizer.py
sortify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_detect_type.py  test_dry_run.py  test_errors.py  test_folder.py  test_move.py  test_organize.py
